unpackaged/main/default/objects/CMPL123CME__Concomitant_Product__c/CMPL123CME__Concomitant_Product__c.object-meta.xml
<CustomObject>
    <label>Concomitant Product</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Product No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Concomitant Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>