unpackaged/main/default/objects/CMPL123CME__Concomitant_Product__c/fields/CMPL123CME__D11_End_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D11_End_Date__c</fullName>
        <label>D11 - End Date</label>
        <type>Date</type>
    </CustomField>