unpackaged/main/default/objects/CMPL123CME__Concomitant_Product__c/fields/CMPL123CME__D11_End_Date_Null__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D11_End_Date_Null__c</fullName>
        <label>D11 - End Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>