unpackaged/main/default/objects/CMPL123CME__Concomitant_Product__c/fields/CMPL123CME__D11_Product__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__D11_Product__c</fullName>
        <label>D11 - Product</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>