unpackaged/main/default/objects/CMPL123CME__Concomitant_Product__c/fields/CMPL123CME__EMDR_IsEmpty_End_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__EMDR_IsEmpty_End_Date__c</fullName>
        <description>EMDR IsEmpty End Date</description>
        <formula>IF( ISBLANK(CMPL123CME__D11_End_Date__c),
TEXT( CMPL123CME__D11_End_Date_Null__c) ,
IF(LEN(TEXT(MONTH(CMPL123CME__D11_End_Date__c))) = 1, '0'&amp; TEXT(MONTH(CMPL123CME__D11_End_Date__c)), TEXT(MONTH(CMPL123CME__D11_End_Date__c))) 
&amp;'/'&amp;
IF(LEN(TEXT(DAY(CMPL123CME__D11_End_Date__c))) = 1, '0'&amp; 
TEXT(DAY(CMPL123CME__D11_End_Date__c)), TEXT(DAY(CMPL123CME__D11_End_Date__c))) 
&amp;'/'&amp;
TEXT(YEAR(CMPL123CME__D11_End_Date__c)))</formula>
        <inlineHelpText>EMDR IsEmpty End Date</inlineHelpText>
        <label>EMDR IsEmpty End Date</label>
        <type>Text</type>
    </CustomField>