unpackaged/main/default/objects/CMPL123CME__Concomitant_Product__c/fields/CMPL123CME__EMDR_IsEmpty_Start_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__EMDR_IsEmpty_Start_Date__c</fullName>
        <formula>IF( ISBLANK(CMPL123CME__D11_Start_Date__c),
TEXT( CMPL123CME__D11_Start_Date_Null__c) ,
IF(LEN(TEXT(MONTH(CMPL123CME__D11_Start_Date__c))) = 2,  TEXT(MONTH(CMPL123CME__D11_Start_Date__c)),'0'&amp; TEXT(MONTH(CMPL123CME__D11_Start_Date__c))) 
&amp;'/'&amp;
IF(LEN(TEXT(DAY(CMPL123CME__D11_Start_Date__c))) = 2, TEXT(DAY(CMPL123CME__D11_Start_Date__c)),'0'&amp; 
TEXT(DAY(CMPL123CME__D11_Start_Date__c))) 
&amp;'/'&amp;
TEXT(YEAR(CMPL123CME__D11_Start_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMDR IsEmpty Start Date</label>
        <type>Text</type>
    </CustomField>