unpackaged/main/default/objects/CMPL123CME__Concomitant_Product__c/fields/CMPL123CME__Related_EMDR__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Related_EMDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related EMDR</label>
        <referenceTo>CMPL123CME__EMDR__c</referenceTo>
        <relationshipName>Concommitant_Products</relationshipName>
        <type>Lookup</type>
    </CustomField>