unpackaged/main/default/objects/CMPL123CME__Concomitant_Product__c/listViews/CMPL123CME__All.listView-meta.xml
<ListView>
        <fullName>CMPL123CME__All</fullName>
        <columns>CMPL123CME__D11_Product__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__Related_EMDR__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>